--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
-  "author": "",
+  "author": "serhiiko",
   "license": "ISC",
   "dependencies": {
     "gh-pages": "^3.1.0",
     "vue": "^2.6.11"
-  },
-  "devDependencies": {
-    "@vue/cli": "^4.4.6"
   }
 }
